--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
   <!-- 🌄 Le fond défilant -->
-  <img class="background" src="Capture d'écran 2025-09-10 140417.png" alt="Fond du site" />
+<img class="background" src="background.png" alt="Fond du site" />
 
   <div class="content">
     <p>
