--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       color: rgba(185, 74, 166, 0.4);
     }
 
-    /* 🌄 L’image de fond */
+    /* 🌄 Image de fond avec effet de défilement */
     .background {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
-      object-fit: contain; /* garde toute l’image visible */
+      height: 130%; /* un peu plus grande pour l’effet */
+      object-fit: cover;
       z-index: -1;
       transition: filter 1s ease;
     }
@@ -48,7 +48,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      min-height: 100vh;
+      min-height: 200vh; /* pour avoir du scroll */
       padding: 20rem 1rem 15rem 1rem;
       opacity: 0;
       animation: fadeIn 2.5s ease forwards;
@@ -99,8 +99,8 @@
   </style>
 </head>
 <body>
-  <!-- 🌄 Fond -->
-  <img class="background" src="background.png" alt="Fond du site" />
+  <!-- 🌄 Image de fond -->
+  <img class="background" src="background.png" alt="Fond du site" id="bg" />
 
   <div class="content">
     <p>
@@ -120,7 +120,7 @@ Merci beaucoup et bon visionnage
   </div>
 
   <script>
-    // 🎥 API YouTube pour gérer l’assombrissement
+    // 🎥 API YouTube : assombrir fond + texte pendant la lecture
     const tag = document.createElement('script');
     tag.src = "https://www.youtube.com/iframe_api";
     document.body.appendChild(tag);
@@ -139,6 +139,13 @@ Merci beaucoup et bon visionnage
         body.classList.remove('darken');
       }
     }
+
+    // 🌫️ Parallax : le fond bouge avec le scroll
+    const bg = document.getElementById('bg');
+    window.addEventListener('scroll', () => {
+      const offset = window.scrollY * 0.4; // 0.4 = intensité du mouvement
+      bg.style.transform = `translateY(${offset}px)`;
+    });
   </script>
 </body>
 </html>
